summarize per frame and per object

--- a/person_counter_evaluate.ipynb
+++ b/person_counter_evaluate.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -111,13 +111,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../obj_det/utils/visualization_utils.py:25: UserWarning: \n",
+      "This call to matplotlib.use() has no effect because the backend has already\n",
+      "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "The backend was *originally* set to 'module://ipykernel.pylab.backend_inline' by the following code:\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/runpy.py\", line 174, in _run_module_as_main\n",
+      "    \"__main__\", fname, loader, pkg_name)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/runpy.py\", line 72, in _run_code\n",
+      "    exec code in run_globals\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/traitlets/config/application.py\", line 658, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelapp.py\", line 486, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/ioloop.py\", line 1008, in start\n",
+      "    self._run_callback(self._callbacks.popleft())\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/ioloop.py\", line 759, in _run_callback\n",
+      "    ret = callback()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 536, in <lambda>\n",
+      "    self.io_loop.add_callback(lambda : self._handle_events(self.socket, 0))\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 450, in _handle_events\n",
+      "    self._handle_recv()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 480, in _handle_recv\n",
+      "    self._run_callback(callback, msg)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 432, in _run_callback\n",
+      "    callback(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 283, in dispatcher\n",
+      "    return self.dispatch_shell(stream, msg)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 233, in dispatch_shell\n",
+      "    handler(stream, idents, msg)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 399, in execute_request\n",
+      "    user_expressions, allow_stdin)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/ipkernel.py\", line 208, in do_execute\n",
+      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/zmqshell.py\", line 537, in run_cell\n",
+      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2724, in run_cell\n",
+      "    self.events.trigger('post_run_cell')\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/events.py\", line 74, in trigger\n",
+      "    func(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/pylab/backend_inline.py\", line 160, in configure_once\n",
+      "    activate_matplotlib(backend)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/pylabtools.py\", line 315, in activate_matplotlib\n",
+      "    matplotlib.pyplot.switch_backend(backend)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/pyplot.py\", line 231, in switch_backend\n",
+      "    matplotlib.use(newbackend, warn=False, force=True)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/__init__.py\", line 1410, in use\n",
+      "    reload(sys.modules['matplotlib.backends'])\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/backends/__init__.py\", line 16, in <module>\n",
+      "    line for line in traceback.format_stack()\n",
+      "\n",
+      "\n",
+      "  import matplotlib; matplotlib.use('Agg')  # pylint: disable=multiple-statements\n"
+     ]
+    }
+   ],
    "source": [
     "#from pc_utils import pc_PerImageEvaluation\n",
     "import pc_utils\n",
@@ -152,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -195,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -211,9 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 1, 'name': u'person'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "category_index[1]"
    ]
@@ -231,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -247,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -335,10 +412,7 @@
     "# Store results to Output/Model directory\n",
     "if not os.path.exists(PATH_TO_PREDICTION_DIR):\n",
     "    os.makedirs(PATH_TO_PREDICTION_DIR)\n",
-    "    os.makedirs(os.path.join(PATH_TO_PREDICTION_DIR,\"Image\"))\n",
-    "\n",
-    "if os.path.exists(RESULT_CSV_FILE):\n",
-    "    os.remove(RESULT_CSV_FILE)"
+    "    os.makedirs(os.path.join(PATH_TO_PREDICTION_DIR,\"Image\"))"
    ]
   },
   {
@@ -350,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,13 +592,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Unroll the prediction BB as multiple row\n",
     "#<frame>, <id>, <bb_left>, <bb_top>, <bb_width>, <bb_height>, <conf>, <x>, <y>, <z>\n",
-    "def appendMatching(image_id, prediction):    \n",
+    "def appendMatching(image_id, prediction):\n",
+    "    # Result per frame per object\n",
     "    for i in range(prediction['num_detections']):\n",
     "        row = []\n",
     "        # ID\n",
@@ -538,14 +613,32 @@
     "        # bb_height\n",
     "        row.append(row[3] - prediction['detection_boxes'][i][0] )\n",
     "        row = ','.join(map(str,row))\n",
-    "        # conf, x, y, z\n",
+    "\n",
     "        # Frame number\n",
-    "        row = image_id + ',' + row + ',0,0,0,0\\n'\n",
+    "        row = image_id + ',' + row + '\\n'\n",
     "        with open(RESULT_CSV_FILE,'a') as fd:\n",
     "            fd.write(row)\n",
-    "            #writer = csv.writer(fd)\n",
-    "            #writer.writerow(row)\n",
-    "        print row"
+    "    \n",
+    "    # Summary per frame\n",
+    "    # <frame_id> <total_objects> <entry object> <exited object> <same object>\n",
+    "    # Total object is this frame\n",
+    "    # cnt of objects entered / detected first time wrt prev frame\n",
+    "    # cnt of objects who left the frame wrt prev\n",
+    "    \n",
+    "    row = []\n",
+    "    # total\n",
+    "    row.append( prediction['num_detections'] )\n",
+    "    # entry_cnt per frame\n",
+    "    row.append( prediction['num_detections_entry'] )\n",
+    "    # exit_cnt per frame\n",
+    "    row.append( prediction['num_detections_exit'] )\n",
+    "    # same\n",
+    "    row.append( row[0] - row[1] - row[2] )\n",
+    "    \n",
+    "    row = ','.join(map(str, row))\n",
+    "    row = image_id + ',' + row + '\\n'\n",
+    "    with open(SUMMARY_CSV_FILE,'a') as fd:\n",
+    "        fd.write(row)"
    ]
   },
   {
@@ -558,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,13 +660,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Match objects between two frames and tag id to new objects\n",
     "def twoFrameMatching(pie, dt, gt):\n",
-    "    dt = pc_utils.matchOnIoU(pie, dt, gt)\n",
+    "    dt, exit_cnt = pc_utils.matchOnIoU(pie, dt, gt)\n",
+    "    entry_cnt = 0\n",
     "    # Assign id to unassigned detections\n",
     "    for i in range(dt['num_detections']):\n",
     "        if dt['person_id'][i] == -1:\n",
@@ -582,12 +676,16 @@
     "            global pc_label\n",
     "            pc_label[PERSON_COUNTER] = { 'id': PERSON_COUNTER, 'name' : 'PC'+ str(PERSON_COUNTER) }\n",
     "            dt['person_id'][i] = PERSON_COUNTER\n",
+    "            entry_cnt = entry_cnt + 1\n",
+    "    dt['num_detections_entry'] = entry_cnt\n",
+    "    dt['num_detections_exit'] = exit_cnt\n",
+    "    \n",
     "    return dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,12 +710,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign ID to person detected \n",
     "def assignID():\n",
+    "    if os.path.exists(RESULT_CSV_FILE):\n",
+    "        os.remove(RESULT_CSV_FILE)\n",
+    "    if os.path.exists(SUMMARY_CSV_FILE):\n",
+    "        os.remove(SUMMARY_CSV_FILE)\n",
+    "\n",
     "    with open(FILTERED_PKL_FILE,'rb') as fd:\n",
     "        ev_data = pickle.load(fd)\n",
     "\n",
@@ -633,6 +736,8 @@
     "    frame_id = 1\n",
     "    image_id = str(frame_id).zfill(6)\n",
     "    gt = ev_data[image_id] # treated as gt\n",
+    "    gt['num_detections_entry'] = gt['num_detections']\n",
+    "    gt['num_detections_exit'] = 0\n",
     "    gt = makeGT(image_id, gt, initMode=True)\n",
     "   \n",
     "    # Next frame\n",
@@ -659,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,28 +792,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate the prediction\n",
-    "def evaluate():\n",
-    "    print(RESULT_CSV_FILE)\n",
-    "    with open(RESULT_CSV_FILE,'rb') as fd:\n",
-    "        res = fd.read()\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "000001,61,61,0,0\n",
+      "\n",
+      "000002,59,13,15,31\n",
+      "\n",
+      "000003,62,14,11,37\n",
+      "\n",
+      "000004,52,9,19,24\n",
+      "\n",
+      "Total person 36\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    #filter_prediction()\n",
     "    assignID()\n",
-    "    #evaluate()\n",
     "    print \"Total person\", PERSON_COUNTER\n",
     "    print \"Done\"\n",
     "main()"
