Same count bug fixed

--- a/person_counter_evaluate.ipynb
+++ b/person_counter_evaluate.ipynb
@@ -393,7 +393,7 @@
     "    VIDEO_SEQ = str(VIDEO_SEQ_ID).zfill(2)\n",
     "    PATH_TO_DATABASE = '../MOT16/test/MOT16-' + VIDEO_SEQ + '/'\n",
     "\n",
-    "IMAGE_COUNT = 5 # getImageCount()\n",
+    "IMAGE_COUNT = getImageCount()\n",
     "\n",
     "#print IMAGE_COUNT\n",
     "PATH_TO_IMAGES_DIR = PATH_TO_DATABASE + 'img1/'\n",
@@ -505,53 +505,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_gt_for_single_image(image_id):\n",
-    "    annotation_path = os.path.join(PATH_TO_TEST_ANNOTATIONS_DIR, '{}.xml'.format(image_id))\n",
-    "    \n",
-    "    tree = ET.parse(annotation_path)\n",
-    "    root = tree.getroot()\n",
-    "\n",
-    "    groundtruth_dict = {}\n",
-    "    gt_bbs = []\n",
-    "    cat_id = []\n",
-    "    cat_label = []\n",
-    "    \n",
-    "    for object_node in root.iterfind('object'):\n",
-    "        # Extract boundary box from XML files\n",
-    "        for bb in object_node.iterfind('bndbox'):\n",
-    "            gt_bb = []\n",
-    "            for val in ['ymin', 'xmin', 'ymax', 'xmax']:\n",
-    "                gt_bb.append(float(bb.find(val).text))\n",
-    "            gt_bbs.append(gt_bb)\n",
-    "\n",
-    "        # Extract ground truth category\n",
-    "        child = object_node.find('name')\n",
-    "        cat_label.append(child.text)\n",
-    "        # Hardcoded as of now :/\n",
-    "        if child.text == 'cow':\n",
-    "            cat_id.append(21)\n",
-    "        elif child.text == 'dog':\n",
-    "            cat_id.append(18)\n",
-    "        # print(child.text)\n",
-    "\n",
-    "    # Extract size\n",
-    "    groundtruth_dict['size'] = [int(root.find('size/width').text), int(root.find('size/height').text)]\n",
-    "    # Dog is category 18 / Todo update\n",
-    "    groundtruth_dict['num_detections'] = len(gt_bbs)\n",
-    "    groundtruth_dict['original_boxes'] = gt_bbs\n",
-    "    groundtruth_dict['groundtruth_boxes'] = np.array(gt_bbs, dtype=\"float32\")\n",
-    "    groundtruth_dict['groundtruth_classes'] = np.array(cat_id) # np.full([len(gt_bbs)], 18)\n",
-    "    groundtruth_dict['groundtruth_class_labels'] = np.array(cat_label) # np.full([len(gt_bbs)], 'dog')\n",
-    "    \n",
-    "    return groundtruth_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
@@ -633,7 +586,7 @@
     "    # exit_cnt per frame\n",
     "    row.append( prediction['num_detections_exit'] )\n",
     "    # same\n",
-    "    row.append( row[0] - row[1] - row[2] )\n",
+    "    row.append( row[0] - row[1])\n",
     "    \n",
     "    row = ','.join(map(str, row))\n",
     "    row = image_id + ',' + row + '\\n'\n",
@@ -792,22 +745,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "000001,61,61,0,0\n",
-      "\n",
-      "000002,59,13,15,31\n",
-      "\n",
-      "000003,62,14,11,37\n",
-      "\n",
-      "000004,52,9,19,24\n",
-      "\n",
-      "Total person 36\n",
+      "Total person 7705\n",
       "Done\n"
      ]
     }
